--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 :root {
-    --red: #F5584C;
-    --yellow: #FDB82C;
+    --red: #f5584c;
+    --yellow: #fdb82c;
     --grey: #707070;
-    --bg-light-blue: #EEF5FF;
-    --bg-pink: #FFD8D7;
-    --bg-blue: #1577FB;
-    --orange: #FD9A2A;
-    --light-grey: #F2F2F2;
-    --light-orange: #F7D99F;
-    --light-yellow: #FFF1D9;
+    --bg-light-blue: #eef5ff;
+    --bg-pink: #ffd8d7;
+    --bg-blue: #1577fb;
+    --bg-blue2: #3a86f5;
+    --orange: #fd9a2a;
+    --light-grey: #f2f2f2;
+    --light-orange: #f7d99f;
+    --light-yellow: #fff1d9;
 }
 
 .text-grey {
@@ -31,6 +32,7 @@ p {
 
 body {
     color: black;
+    overflow-x: hidden;
 }
 
 .mid-text {
@@ -39,8 +41,9 @@ body {
 
 .my-container {
     width: 100%;
-    max-width: 1400px;
+    max-width: 1434px;
     margin: auto;
+    padding: 0 1rem;
 }
 
 .thumbs-up {
@@ -51,7 +54,15 @@ body {
 }
 
 .carousel-item {
-    height: 100%;
+    height: 200px;
+    font-size: 20px;
+}
+
+.carousel-item.active,
+.carousel-item-next {
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
 }
 
 .list-item[data-list="after"] {
@@ -83,10 +94,9 @@ body {
 
 .clients {
     position: absolute;
-    top: 65%;
-    transform: translateY(-50%);
-    right: 301px;
-
+    top: 17%;
+    /*transform: translateY(-55%);*/
+    right: 309px;
 }
 
 .bg-pink {
@@ -114,13 +124,12 @@ body {
     width: 536px;
     border-radius: 30px;
     box-shadow: 0px 0px 15px 7px rgb(0 0 0 / 24%);
-
 }
 
 .image-txt {
     bottom: 0;
     left: 40px;
-    width: 399px
+    width: 399px;
 }
 
 .container-fluid {
@@ -128,19 +137,78 @@ body {
 }
 
 .color-yellow {
-    color: var(--yellow)
+    color: var(--yellow);
 }
 
-
 .btn-main {
-
     background-color: var(--red);
     text-transform: uppercase;
     border-radius: 0;
     letter-spacing: 0px;
-    padding: .3rem 1.4rem;
+    padding: 0.3rem 1.4rem;
     border: 1px solid var(--grey);
+}
 
+.vh-40 {
+    height: 40vh;
+    min-height: 40vh;
+}
+
+.nav-pills .nav-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-item,
+.nav-link {
+    cursor: pointer;
+}
+
+a {
+    cursor: pointer;
+    text-decoration: none !important;
+}
+
+.text-black {
+    color: black;
+}
+
+.big-red-circle {
+    width: 1400px;
+    height: 1400px;
+    bottom: -793px;
+    border-radius: 50%;
+    background-color: #db3b3b;
+    right: -765px;
+}
+
+.copyright {
+    display: block;
+    align-self: end;
+    z-index: 1;
+    margin-right: 5rem !important;
+    color: rgba(245, 88, 76, 0.85);
+}
+
+button.nav-link {
+    width: 32px !important;
+    height: 32px !important;
+    border-radius: 50% !important;
+    background-color: var(--bg-blue) !important;
+}
+
+button.nav-link.active {
+    background-color: var(--orange) !important;
+}
+
+button.nav-link.active + span {
+    color: var(--yellow) !important;
+}
+
+.product-header {
+    height: 250px;
+    background-color: var(--bg-blue2);
 }
 
 nav {
@@ -152,11 +220,12 @@ nav {
     color: white;
     width: 238.47px;
     height: 60px;
-    padding: .6rem 1.5rem;
+    padding: 0.6rem 1.5rem;
     font-size: 26px;
     -webkit-box-shadow: 9px 9px 0px 0px var(--yellow);
     box-shadow: 9px 9px 0px 0px var(--yellow);
-    transition: transform 0.3s ease, color 0.3s ease, border-color .3s ease, box-shadow 0.3s ease;
+    transition: transform 0.3s ease, color 0.3s ease, border-color 0.3s ease,
+    box-shadow 0.3s ease;
 }
 
 .btn-main-3d:hover {
@@ -180,7 +249,6 @@ nav {
     transform: translate(9px, 9px) !important;
 }
 
-
 .fw-black {
     font-weight: 900;
 }
@@ -188,7 +256,6 @@ nav {
 .big-text {
     font-size: 58px;
 }
-
 
 .nav-link {
     color: white !important;
@@ -209,16 +276,25 @@ nav {
 
 .screen-image-container {
     width: 100%;
+    max-width: 608px;
     height: 507px;
-    background: url("/images/Computer@2x.png");
+    background: url("./images/Computer@2x.png");
     background-repeat: no-repeat;
     background-size: cover;
+    margin: auto;
+}
+.screen-image-container img{
+    max-width: 608px;
+}
+.modal-body,
+.modal-content {
+    width: fit-content;
 }
 
 .screen-image-container img {
     top: 24px;
     left: 24px;
-    height: 314px;
+    height: 315px;
     width: 559px;
 }
 
@@ -228,12 +304,12 @@ nav {
 }
 
 .carousel-control-next {
-    right: 30px;
+    right: 13px;
     width: 24% !important;
 }
 
 .carousel-control-prev {
-    left: 30px;
+    left: 5px;
     width: 24% !important;
 }
 
@@ -241,7 +317,7 @@ nav {
     width: 100%;
     height: 100vh;
     padding-top: 6vh;
-    background: url("/images/Hero Background.svg");
+    background: url("./images/Hero Background.svg");
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
@@ -282,6 +358,14 @@ section {
     background-color: var(--bg-blue);
 }
 
+.bg-yellow {
+    background-color: var(--yellow);
+}
+
+button[data-bs-dismiss]:hover {
+    background-color: var(--yellow) !important;
+}
+
 .vh-100 {
     height: 100vh;
 }
@@ -289,7 +373,6 @@ section {
 .bg-red {
     background-color: var(--red);
 }
-
 
 .gap100 {
     gap: 100px;
@@ -337,7 +420,7 @@ ul {
 }
 
 .list-item {
-    margin: .3rem 0;
+    margin: 0.3rem 0;
     padding-top: 0.3rem;
     padding-bottom: 0.3rem;
     padding-left: 2rem;
@@ -352,8 +435,8 @@ ul {
 
 .list {
     z-index: 10;
-    width: 711px;
-    height: 447px;
+    width: 100%;
+    height: max-content;
     margin: auto;
     position: relative;
 }
@@ -363,24 +446,31 @@ ul {
     display: block;
     border-radius: 30px 0 0 30px;
     content: "";
-    width: 55%;
+    width: 50%;
     z-index: -1;
     height: 100%;
     background-color: var(--light-grey);
+    transition: background-color 0.4s ease;
 }
 
 .lines-blue {
-    background-image: url("/images/Group 140.svg");
+    background-image: url("./images/Group 140.svg");
     background-size: cover;
     background-repeat: no-repeat;
 }
 
+.orange.list::before {
+    background-color: var(--light-orange);
+}
+
+.grey.list::after {
+    background-color: var(--light-grey);
+}
 
 .divider {
     height: 380px;
     left: 47%;
     border-radius: 10px;
-
 }
 
 .clock-image {
@@ -407,15 +497,30 @@ ul {
     top: -55px;
 }
 
+.woman-shadow {
+    left: 0;
+    bottom: 0;
+}
+
 .red-grid {
-    background-image: url("/images/Grid Background.svg");
+    background-image: url("./images/Grid Background.svg");
     background-size: cover;
     background-repeat: no-repeat;
     z-index: 0;
     width: 100%;
     height: 100%;
     top: 0;
-    opacity: .4;
+    opacity: 0.4;
+}
+
+.grey-grid {
+    background-image: url("./images/Background Grid (1).svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 983px;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: -1;
 }
 
 .background-workers {
@@ -423,11 +528,11 @@ ul {
     border-radius: 40px 0 0 40px;
     width: 55%;
     margin-left: auto;
-    background-color: #EEF7FF;
+    background-color: #eef7ff;
 }
 
 .carousel-control-prev-icon {
-    background-image: url("/images/Arrow-1.svg") !important;
+    background-image: url("./images/Arrow-1.svg") !important;
 }
 
 button[data-bs-slide-to] {
@@ -439,10 +544,9 @@ button[data-bs-slide-to] {
     margin: 0 10px;
 }
 
-
 .big-bubble {
-    background-image: url("/images/Artwork 37.svg");
-    width: 474px;
+    background-image: url("./images/Artwork 37.svg");
+    width: 450px;
     height: 306px;
 }
 
@@ -451,24 +555,25 @@ button[data-bs-slide-to].active {
 }
 
 .carousel-control-next-icon {
-    background-image: url("/images/Arrow.svg") !important;
+    background-image: url("./images/Arrow.svg") !important;
 }
 
 .bird-cage {
-    background-image: url("/images/Shadow birdcage-path.svg");
+    background-image: url("./images/Shadow birdcage-path.svg");
     background-size: cover;
     background-repeat: no-repeat;
 }
 
 .cash-background {
-    background-image: url("/images/Cash Background.svg");
+    background-image: url("./images/Cash Background.svg");
     background-size: cover;
     background-repeat: no-repeat;
 }
 
 .testimonial-boxes {
-    width: 1076px;
-    height: 485px;
+    max-width: 1076px;
+    min-height: 485px;
+    height: fit-content;
     border-radius: 30px;
     gap: 35px;
     padding: 3rem;
@@ -478,13 +583,14 @@ button[data-bs-slide-to].active {
     position: absolute;
     display: block;
     content: "";
-    width: 45%;
+    width: 50%;
     height: 100%;
     z-index: -1;
     top: 0;
     right: 0;
     border-radius: 0 30px 30px 0;
     background-color: var(--light-orange);
+    transition: background-color 0.4s ease;
 }
 
 .list-item::before {
