--- a/style.css
+++ b/style.css
@@ -9,7 +9,53 @@
     --orange: #fd9a2a;
     --light-grey: #f2f2f2;
     --light-orange: #f7d99f;
+    --dark-blue: #1F215B;
     --light-yellow: #fff1d9;
+}
+
+
+button.nav-link {
+    background-image: url("./images/dark-checkmark.svg") !important;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+    background-position: center !important;
+    border: none !important;
+    outline: none !important;
+}
+
+button.nav-link.active {
+    background-image: url("./images/white-checkmark.svg") !important;
+}
+
+.inside-product-circle-tabs {
+    width: 18px !important;
+    height: 18px !important;
+    border-radius: 50%;
+}
+
+.badge-product {
+    top: -100px;
+    left: -75px;
+}
+
+.inside-product-circle-tabs:nth-child(1) {
+    background-color: #B9D7EE !important;
+}
+
+.inside-product-circle-tabs:nth-child(2) {
+    background-color: #B9D7EE !important;
+}
+
+.inside-product-circle-tabs:nth-child(3) {
+    background-color: #C5D4ED !important;
+}
+
+.inside-product-circle-tabs:nth-child(4) {
+    background-color: #C5D4ED !important;
+}
+
+.inside-product-circle-tabs.active {
+    background-color: #DEC045 !important;
 }
 
 .text-grey {
@@ -18,6 +64,18 @@
 
 .bg-light-yellow {
     background-color: var(--light-yellow);
+}
+
+button.nav-link:focus-visible {
+    outline: none !important;
+}
+
+button.nav-link.active + .click-label {
+    color: var(--yellow) !important;
+}
+
+.color-dark-blue {
+    color: var(--dark-blue) !important;
 }
 
 * {
@@ -145,13 +203,43 @@ body {
     text-transform: uppercase;
     border-radius: 0;
     letter-spacing: 0px;
-    padding: 0.3rem 1.4rem;
+    padding: 0.3rem 1.4rem !important;
     border: 1px solid var(--grey);
 }
 
+li[role] {
+    gap: 10px;
+}
+
+.inside-product-img {
+    width: 515px;
+    height: 276px;
+    /*align-self: center;*/
+    box-shadow: -182px 1px 0px 37px #F2F2F2;
+    border-radius: 0 10px 10px 0;
+}
+
+.inside-product-bkad {
+    align-self: center;
+    padding: 1.5rem;
+    box-shadow: 204px 0px 0px 0px #ffd78f;
+    background-color: #FFD78F !important;
+    border-radius: 20px 0 0px 20px;
+}
+
+.left-gif {
+    /*align-self: center;*/
+
+}
+
 .vh-40 {
-    height: 40vh;
-    min-height: 40vh;
+    height: 40vh !important;
+    min-height: 40vh !important;
+}
+
+.vh-30 {
+    height: fit-content !important;
+    min-height: 30vh !important;
 }
 
 .nav-pills .nav-item {
@@ -198,9 +286,6 @@ button.nav-link {
     background-color: var(--bg-blue) !important;
 }
 
-button.nav-link.active {
-    background-color: var(--orange) !important;
-}
 
 button.nav-link.active + span {
     color: var(--yellow) !important;
@@ -209,6 +294,10 @@ button.nav-link.active + span {
 .product-header {
     height: 250px;
     background-color: var(--bg-blue2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 nav {
@@ -283,9 +372,11 @@ nav {
     background-size: cover;
     margin: auto;
 }
-.screen-image-container img{
+
+.screen-image-container img {
     max-width: 608px;
 }
+
 .modal-body,
 .modal-content {
     width: fit-content;
@@ -396,6 +487,10 @@ input {
     padding: 1rem 0;
     border-bottom: 3px solid white;
     color: white;
+}
+
+.text-red {
+    color: var(--red) !important;
 }
 
 .small-text {
